Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -667,6 +667,7 @@
                 </div>
             </div>
         </section>
+           <div class="card"><a href="github.com/nihan-vp/vx" >Details.</a></div>
 
         <footer>
             <span>Vision X | Context-aware smart glasses</span>
@@ -675,5 +676,6 @@
         </footer>
     </main>
 </body>
+
 
 </html>
