Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -667,11 +667,11 @@
                 </div>
             </div>
         </section>
-           <div class="card"><a href="github.com/nihan-vp/vx" >Details.</a></div>
-
+        
         <footer>
             <span>Vision X | Context-aware smart glasses</span>
             <span>Camera -> Detection -> Phone -> OLED</span>
+            <p><a href="github.com/nihan-vp/vx" class="cl" >Details.</a></p>
             <p>Developed by <a href="www.nihan-vp.me" class="cl">Nihan</a></p>
         </footer>
     </main>
@@ -679,3 +679,4 @@
 
 
 </html>
+
