--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vision X Smart Glasses</title>
+    <linkk rel="icon" href="https://res.cloudinary.com/dr9rp0bvz/image/upload/v1767329868/favicon_xvlkfa.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -679,4 +680,5 @@
 
 
 </html>
+
 
