--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vision X Smart Glasses</title>
-    <linkk rel="icon" href="https://res.cloudinary.com/dr9rp0bvz/image/upload/v1767329868/favicon_xvlkfa.png">
+    <link rel="icon" type="image/png"
+        href="https://res.cloudinary.com/dr9rp0bvz/image/upload/v1767329868/favicon_xvlkfa.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -490,7 +491,11 @@
     <main class="shell">
         <header>
             <div class="brand">
-                <div class="brand-mark">VX</div>
+                <div class=""
+                    style="width: 50px; height: 50px; border-radius: 16px; background: linear-gradient(150deg, rgba(0, 240, 181, 0.9), rgba(11, 226, 197, 0.8)); display: grid; place-items: center; box-shadow: 0 10px 30px rgba(0, 240, 181, 0.15);">
+                    <img src="https://res.cloudinary.com/dr9rp0bvz/image/upload/v1767330237/Generated_Image_January_02__2026_-_10_22AM__1_-removebg-preview_wsrofp.png"
+                        style="width: 50px; height: 50px; display: flex; align-items: center; justify-content: center;"></img>
+                </div>
                 <div>
                     <div style="font-weight:700;">Vision X</div>
                     <div style="color:var(--muted); font-size:13px;">Context-aware smart glasses</div>
@@ -668,17 +673,13 @@
                 </div>
             </div>
         </section>
-        
+
         <footer>
             <span>Vision X | Context-aware smart glasses</span>
             <span>Camera -> Detection -> Phone -> OLED</span>
-            <p><a href="github.com/nihan-vp/vx" class="cl" >Details.</a></p>
             <p>Developed by <a href="www.nihan-vp.me" class="cl">Nihan</a></p>
         </footer>
     </main>
 </body>
 
-
 </html>
-
-
