Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -678,9 +678,10 @@
             <span>Vision X | Context-aware smart glasses</span>
             <span>Camera -> Detection -> Phone -> OLED</span>
             <p><a href="github.com/nihan-vp/vx" class="cl">Info</a></p>
-            <p>Developed by <a href="www.nihan-vp.me" class="cl">Nihan</a></p>
+            <p>Developed by <a href="https://www.nihan-vp.me" class="cl">Nihan</a></p>
         </footer>
     </main>
 </body>
 
 </html>
+
