--- a/index.html
+++ b/index.html
@@ -677,11 +677,12 @@
         <footer>
             <span>Vision X | Context-aware smart glasses</span>
             <span>Camera -> Detection -> Phone -> OLED</span>
-            <p><a href="github.com/nihan-vp/vx" class="cl">Info</a></p>
+            <p><a href="https://github.com/nihan-vp/vx" class="cl">Info</a></p>
             <p>Developed by <a href="https://www.nihan-vp.me" class="cl">Nihan</a></p>
         </footer>
     </main>
 </body>
 
 </html>
+
 
